--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <h1>Pierre-Feuille-Ciseau-Lézard-Spock</h1>
 
-        <a href="./narranMaxime/maingate.html"/>
+        <a href="./narranMaxime/maingate.html">Enter here</a>
     </body>
 
 </html>
