--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Index first page</title>
+        <title>MyPage</title>
 
     </head>
     <body>
+        <h1>Curiculum Vitae + Exemple de projet Formation</h1>
+        <div>
+            <a href="./narranMaxime/maingate.html">Demo projet</a><br>
+            <a href="./cv.docx" download="./cv.docx">Télécharger mon Cv</a>
+        </div>
 
-
-        <h1>Pierre-Feuille-Ciseau-Lézard-Spock</h1>
-
-        <a href="./narranMaxime/maingate.html">Enter here</a>
     </body>
 
 </html>
