--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Curiculum Vitae + Exemple de projet Formation</h1>
         <div>
-            <a href="./narranMaxime/maingate.html">Demo projet</a><br>
-            <a href="./cv.docx" download="./cv.docx">Télécharger mon Cv</a>
+            <p><a href="./narranMaxime/maingate.html">Demo projet</a></p>
+            <p><a href="./cv.docx" download="./cv.docx">Télécharger le Cv</a></p>
         </div>
 
     </body>
