--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <h1>Curiculum Vitae + Exemple de projet Formation</h1>
+        <h1>Curriculum Vitae + Exemple de projet Formation</h1>
         <div>
             <p><a href="./narranMaxime/maingate.html">Demo projet</a></p>
             <p><a href="./cv.docx" download="./cv.docx">Télécharger le Cv</a></p>
