add selecteur project

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
     </head>
     <body>
-        <h1>Curriculum Vitae + Exemple de projet Formation</h1>
+        <h1>Curriculum Vitae + Exemple d'applications simples</h1>
         <div>
-            <p><a href="./narranMaxime/maingate.html">Demo projet</a></p>
+            <p><a href="./narranMaxime/maingate.html">Pierre-papier-ciseau-lézard-spock</a></p>
+            <p><a href="./Selecteur/SelecteurAléatoire.html">Sélécteur Aléatoire</a></p>
             <p><a href="./cv.docx" download="./cv.docx">Télécharger le Cv</a></p>
         </div>
 
