--- a/Selecteur/SelecteurAléatoire.html
+++ b/Selecteur/SelecteurAléatoire.html
@@ -12,7 +12,7 @@
             <a href="javascript:history.back()">retour</a>
             <button id="myBtn">Fichier des participants</button>
             <label for="removePart">Un.e volontaire:</label>
-            <input  type="text" id="Volunteer" name="removePart" list="part">
+            <input  type="text" id="Volunteer" name="removePart" list="part" title="Appuyer sur enter une fois la personne selectionné.e">
             <datalist id="part"></datalist>
         </div>
 
