--- a/Selecteur/SelecteurAléatoire.html
+++ b/Selecteur/SelecteurAléatoire.html
@@ -34,7 +34,7 @@
                 <div id="mylistFiller" class="modal">
                         <div class="modal-content">
                                 <span class="close">&times;</span>
-                                <h2>Choisir un fichier representant les participants au tirage au soert</h2><input type="file" accept=".txt" id="fileInput">
+                                <h2>Choisir un fichier representant les participants au tirage au sort</h2><input type="file" accept=".txt" id="fileInput">
                         </div>
                 </div>
                 
