--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div>
             <p><a href="./narranMaxime/maingate.html">Pierre-papier-ciseau-lézard-spock</a></p>
             <p><a href="./Selecteur/SelecteurAléatoire.html">Sélécteur Aléatoire</a></p>
-            <p><a href="./cv.docx" download="./cv.docx">Télécharger le Cv</a></p>
+            <p><a href="./cv_narran.docx" download="./cv.docx">Télécharger le Cv(20/01/2019)</a></p>
         </div>
 
     </body>
