--- a/Selecteur/SelecteurAléatoire.html
+++ b/Selecteur/SelecteurAléatoire.html
@@ -4,7 +4,7 @@
     <title>Sélecteur aléatoire</title>
     <meta charset="utf-8" />
     <meta name="description" content="A random selector" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
