add better winners display

--- a/Selecteur/SelecteurAléatoire.html
+++ b/Selecteur/SelecteurAléatoire.html
@@ -30,9 +30,13 @@
                 </button>
             </div>
             <div>
-                <pre id="fileDisplayArea"></pre>
+                <div class="table">
+                            <ul id="candidate">
+                            </ul>
+                            <ul id="victorious">
+                            </ul>           
+                </div>
             </div>
-
         </div>
 
         <div id="mylistFiller" class="modal">
