fix previous page

--- a/Selecteur/SelecteurAléatoire.html
+++ b/Selecteur/SelecteurAléatoire.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="sidebar">
-        <a href="javascript:history.back()">retour</a>
+        <a href="../index.html">retour</a>
         <button id="myBtn"
             title="Les personnes doivent etre séparée par une virgule, un point ou un retour à la ligne">Fichier des
             participants</button>
